<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample2">

    <TextView
        android:id="@+id/title"
        android:layout_width="242dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="Draw Detector"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/title"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/CLEAR"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_alignParentStart="true"

        android:layout_marginStart="13dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/buttonshapecolor"
        android:text="CLEAR"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pencolor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/CLEAR"
        android:background="@drawable/buttonshapecolor"
        android:text="COLOR"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forme"
        android:layout_marginStart="6dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/pencolor"
        android:background="@drawable/buttonshapecolor"
        android:text="START"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="181dp"
        android:layout_height="59dp"
        android:layout_below="@+id/title"

        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:text="Dessiner un :"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forme"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/text1"
        android:text="Press Start"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <projet.license.PaintView
        android:id="@+id/myCanvas"
        android:layout_width="284dp"
        android:layout_height="441dp"
        android:layout_above="@+id/textTicks"
        android:layout_below="@+id/pencolor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="7dp" />

    <TextView
        android:id="@+id/textTicks"
        android:layout_width="129dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:text="TICKS :"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/help"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/ticks"
        android:background="@drawable/buttonshapecolor"
        android:onClick="showToast"
        android:text="HELP"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ticks"
        android:layout_width="113dp"
        android:layout_height="65dp"
        android:layout_below="@+id/myCanvas"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/textTicks"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/valider"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forme"
        android:layout_alignEnd="@+id/start"
        android:layout_marginStart="7dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="-1dp"
        android:layout_toEndOf="@+id/pencolor"
        android:background="@drawable/buttonshapecolor"
        android:text="SEND"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>