<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/DrawDetector"
        android:layout_width="111dp"
        android:layout_height="70dp"
        android:layout_below="@+id/Choose"
        android:layout_alignParentStart="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="86dp"
        android:background="@drawable/brushblack"
        android:text="Draw Detector"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/RtoDetector"
        android:layout_width="111dp"
        android:layout_height="70dp"
        android:layout_below="@+id/Choose"
        android:layout_marginStart="63dp"
        android:layout_marginTop="88dp"
        android:layout_toEndOf="@+id/DrawDetector"
        android:background="@drawable/brushblue"
        android:text="RTO DETECTOR"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/TimeDetector"
        android:layout_width="111dp"
        android:layout_height="70dp"
        android:layout_below="@+id/DrawDetector"
        android:layout_alignParentStart="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/brushred"
        android:text="TIME DETECTOR"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Riddle"
        android:layout_width="111dp"
        android:layout_height="70dp"
        android:layout_below="@+id/RtoDetector"
        android:layout_marginStart="63dp"
        android:layout_marginTop="51dp"
        android:layout_toEndOf="@+id/TimeDetector"
        android:background="@drawable/brushorange"
        android:text="RIDDLES"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/TrainingDetector"
        android:layout_width="111dp"
        android:layout_height="70dp"
        android:layout_below="@+id/TimeDetector"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/brushgreen"
        android:text="WarmUp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Choose"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="190dp"
        android:text="Choose a game "
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/stat"
        android:layout_width="111dp"
        android:layout_height="70dp"
        android:layout_below="@+id/Riddle"
        android:layout_marginStart="62dp"
        android:layout_marginTop="38dp"
        android:layout_toEndOf="@+id/TrainingDetector"
        android:background="@drawable/brushyellow"
        android:text="STATS"
        android:textStyle="bold" />

</RelativeLayout>