...
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginConfim"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_below="@+id/loginName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="111dp"
        android:background="@drawable/buttonshapecolor"
        android:text="confirm"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameText"
...
