...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignEnd="@+id/start"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/valider"
        android:text="START"
        tools:ignore="NotSibling" />


    <Button
        android:id="@+id/valider"
        android:layout_width="wrap_content"
...
